<resources>
    <string name="app_name">WeHub</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="transition_logo">transition_logo</string>
    <string name="transition_logo_name">transition_logo_name</string>
    <string name="sign_in">Sign in</string>
    <string name="user">user</string>
    <string name="name">name</string>
    <string name="bio">bio</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_profile">Profiles</string>
    <string name="title_news">News</string>
    <string name="title_events">Events</string>
    <string name="title_repositories">Repositories</string>
    <string name="title_stars">Stars</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="title_gists">Gists</string>

</resources>
