<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_one" android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_profile"
            android:title="@string/title_profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/menu_news"
            android:title="@string/title_news"
            android:icon="@drawable/ic_broadcast"
            android:checked="true"/>

        <item
            android:id="@+id/menu_events"
            android:title="@string/title_events"
            android:icon="@drawable/ic_events"/>
    </group>

    <group android:id="@+id/group_events" android:checkableBehavior="single" >

    </group>

</menu>