<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_160"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_avatar_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dimen_48"
            android:layout_height="@dimen/dimen_48"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:lines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:lines="1"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
