<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_theme"
    tools:context=".ui.act.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_130"
            android:paddingLeft="@dimen/dimen_24"
            android:paddingRight="@dimen/dimen_24"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_logo"
                android:src="@mipmap/icon_logo"/>

            <LinearLayout
                android:id="@+id/layout_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_36"
                android:gravity="bottom"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/il_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:theme="@style/Input">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textColor="@color/color_with_text"
                        android:inputType="text"
                        android:textSize="@dimen/text_14"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:theme="@style/Input">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColor="@color/color_with_text"
                        android:inputType="textPassword"
                        android:textSize="@dimen/text_14"
                        android:drawablePadding="@dimen/dimen_12"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_48"
                android:layout_marginLeft="@dimen/dimen_36"
                android:layout_marginRight="@dimen/dimen_36"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dimen_8"
                android:textColor="@color/color_theme"
                android:text="@string/sign_in"
                android:layout_marginBottom="@dimen/dimen_8"
                android:background="@drawable/shape_login_btn"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
